<resources>
    <string name="name1">Курган Бессмертия</string>
    <string name="name2">Площадь партизан</string>
    <string name="name3">Памятник водителям</string>
    <string name="name4">Парк-музей имени А.К.Толстого</string>
    <string name="name5">Брянский областной театр драмы им. А. К. Толстого</string>
    <string name="name6">Стадион Динамо</string>
    <string name="name7">Покровская гора</string>
    <string name="name8">Партизанская поляна</string>
    <string name="name9">Свенский монастырь</string>
    <string name="name10">Парк имени Пушкина</string>
    <string name="name11">Сквер имени В.И.Ленина.</string>
    <string name="name12">Воскресенский храм</string>
    <string name="app_name">Брянск</string>
    <string name="b1">Достопримечательности</string>
    <string name="b2">О городе</string>
    <string name="b3">Погода</string>
    <string name="b4">Опрос населения</string>
    <string name="b5">Курс валют</string>
    <string name="b6">Полезные телефоны</string>
    <string name="b7">О проекте</string>
    <string name="textBryansk">Брянск — город в России, административный центр Брянской области; город областного значения, образует муниципальное образование город Брянск со статусом городского округа.
Расположен на западной окраине Среднерусской возвышенности, на обоих берегах реки Десны при впадении в неё Болвы и Снежети.
        Население — 402 675 чел. (2020).
25 марта 2010 года Указом Президента Российской Федерации Дмитрия Медведева Брянску присвоено почётное звание «Город воинской славы».</string>
    <string name="textBryansk3">Этимология</string>
    <string name="textBryansk4">Административное деление</string>
    <string name="textBryansk5">Брянск разделён на 4 городских района:\n
Бежицкий (посёлок Радица-Крыловка),\n
Володарский (посёлок Большое Полпино),\n
Советский,\n
Фокинский (посёлок Белые Берега).</string>
    <string name="textBryansk6">Экономика</string>
    <string name="textBryansk7">Брянск — крупный промышленный центр. Основные отрасли промышленности: металлообработка. Также развиты химическая, электротехническая, электронная, деревообрабатывающая, текстильная, пищевая промышленность. Более 1200 предприятий выпускают: тепловозы, грузовые вагоны, автогрейдеры, асфальтоукладчики и другую дорожную технику, сельскохозяйственную технику, строительные материалы, швейные изделия, другую промышленную продукцию.
За 2009 год по предприятиям обрабатывающих производств объём отгруженных товаров собственного производства, выполненных работ и услуг собственными силами составил 28,33 млрд рублей.\nКрупные предприятия\n
Брянский машиностроительный завод;\n
Бежицкий сталелитейный завод;\n
ЗАО «Брянский автомобильный завод»;\n
ОАО «Брянский завод колёсных тягачей»;\n
Ирмаш (дорожно-строительная, землеройная техника);\n
Брянсксельмаш;\n
Термотрон-Завод (оборудование для железных дорог, подъёмно-транспортное оборудование);\n
Брянский арсенал (дорожно-строительное оборудование);\n
Брянский экспериментальный завод по ремонту дизельных машин;\n
Брянский химический завод им. А. И. Поддубного;\n
ЗАО «Группа Кремний ЭЛ» (интегральные схемы, полупроводниковые приборы);\n
НПФ «Электроаппарат» (радиоизмерительные приборы, электротехническое оборудование, сейчас не выпускается);\n
Брянский электромеханический завод;\n
Брянскпромбетон;\n
Брянский завод теплоизоляционных материалов;\n
Брянская бумажная фабрика (пгт Белые Берега);\n
Брянский камвольный комбинат;\n
Брянскспиртпром;\n
Брянскгипрозем\n
Брянконфи (кондитерские изделия);\n
ОАО «Пищекомбинат Бежицкий»;\n
АО «БРЯНСКПИВО»;\n
Мелькрукк (мука, крупа, макаронные изделия, солод);\n
«Куриное Царство», в составе ОАО "Группа «Черкизово»", переработка мяса птицы;\n
Брянский молочный комбинат;\n
Брянский мясокомбинат;\n
Царь-мясо, Брянский мясоперерабатывающий комбинат;\n
ОАО НИИ «Изотерм»;\n
ОАО «НИИПИнефтегазстроймаш»;\n
АО «Транснефть-Дружба».</string>
    <string name="textAttec2">
        Памятник воинам-водителям — памятник советским воинам-водителям, погибшим во время Великой Отечественной войны.\n

Находится на выезде из Брянска по направлению в Орёл на трассе Р120, близ посёлка Осиновая Горка.\n

У подножия тридцатиметрового пилона фигура солдата-шофёра. Он стоит на подножке автомобиля. Правая рука воина лежит на баранке, взгляд устремлен вперед, на дорогу. Это первый сооруженный в Советском Союзе памятник водителям, павшим на дорогах войны. На этом месте в 1943 году была сформирована 18-я автомобильная бригада.\n

Открыт он 12 сентября 1968 года, накануне двадцать пятой годовщины освобождения области от немецко-фашистских захватчиков. Авторы памятника —скульптор П. Ф. Мовчун, архитектор А. А. Гайдученя. Памятник сооружен на средства брянских автотранспортных организаций и дорожных предприятий. Спустя несколько лет он был реконструирован. Сохранив прежний вид, памятник одели в гранит. А на противоположной стороне дороги на постамент встали грузовые машины военных лет.\n

Специальный знак при подъезде к мемориалу призывает проезжающих почтить память погибших воинов-водителей сигналом клаксона.\n
        </string>
    <string name="textAttec1"> Памятник открыт в 1966 году.  Создатели памятника — А. П. Файдыш-Крандиевский, архитекторы М. О. Барщ, А. Н. Колчин.\n
    В честь подвига воинов и партизан 17 сентября 1966 года в Брянске был открыт величественный памятник. Он состоит из трёх скульптурных групп в центре – семнадцатиметровый пилон. На пилоне слова: «За нашу Советскую Родину!».\n
    На обратной стороне обелиска высечены слова: «Вечная слава героям, павшим в боях за свободу и независимость нашей Родины».\n
    На лицевой стороне постамента с группой солдат – надпись из бронзы: «17 сентября 1943 года воинами Советской Армии  и партизанских соединений освобождён от фашистских захватчиков город Брянск».\n
    У памятника воинской и партизанской славы горит Вечный огонь – символ бессмертного подвига советского народа, призыв свято беречь мир.

Почти после полувекового забвения в новых советских реалиях весной 1966 г. Брянский горисполком учредил звание Почетного гражданина города Брянска. В 1966 г. почетными гражданами стали 5 человек. Из них трое были удостоены звания на открытии Площади Партизан: дважды Герой Советского Союза летчик П. М. Камозин, депутат Верховного Совета СССР слесарь Н. С. Злобин и заслуженный врач РСФСР Л. И. Нацкая. Вечный огонь зажег еще один Почетный гражданин – генерал-лейтенант М. И. Дука.</string>
    <string name="textAttec">Курган Бессмертия в Брянске - это монумент, посвященный памяти погибших в годы Великой Отечественной войны. Мемориал представляет собой величественное сооружение, стоящее на искусственном холме посреди городского парка. Здесь ежегодно проводятся торжественные мероприятия в честь Дня Победы. Сейчас это одна из главных достопримечательностей Брянска, жители города и туристы посещают это памятное место.
    \nКурган Бессмертия в городе Брянске находится в парке "Соловьи". Он располагается в Советском районе на берегу реки Десны. Это излюбленное место прогулок горожан. Парк был создан в 1960-е годы, когда было принято решение благоустроить территорию древнего урочища "Соловьи". Проектом предусматривалось создание природной зоны для отдыха и мемориальной части, посвященной памяти павших в годы ВОВ. В 1985 году к юбилею города парк получил название "Центральный парк культуры и отдыха имени 1000-летия Брянска".
    \nПарк "Соловьи" находится в районе Бежецкой улицы. Мемориальная часть расположена на улице Дуки.
        История Кургана Бессмертия в Брянске началась в 1966 году. Было принято решение о создании мемориала в парке. Закладка памятника состоялась незадолго до празднования Дня Победы 7 мая 1967 года. В этой церемонии приняли участие тысячи жителей города. В основании будущего сооружения был заложен орудийный ствол. Он был снят с танка, участвовавшего в битвах. Внутрь ствола поместили капсулу с обращением к потомкам. Её вскрытие было намечено на 2017 год.
        Затем возводился курган. Землю для его воздвижения доставляли с солдатских могил Брянской области, городов-героев, а также с перевала Шипка в Болгарии. В церемонии участвовали матери погибших воинов, ветераны Великой Отечественной войны, молодежь и школьники.

Архитекторами было предложено несколько вариантов сооружения. Победил проект Теплякова В. А., который разработал памятник в форме пятиконечной звезды.

Развернулось строительство мемориала. Комсомольцы города проводили платные концерты, средства от которых переводились в фонд сооружения памятника. Молодежь устраивала воскресники и субботники, помогая возведению Кургана Бессмертия в Брянске. В 1968 году основная часть монумента была построена. На доске выгравировали эту дату, как год основания мемориала. На тот момент памятник выглядел как высокая пятигранная пирамида.

История Кургана Бессмертия в Брянске продолжалась ещё долгие годы. Только спустя 8 лет идея архитектора Теплякова воплотилась в жизнь полностью. На вершине пирамиды была создана пятиконечная звезда. 17 сентября 1976 года состоялось открытие памятника. Сейчас этот монумент является центром композиции парка "Соловьи".

    </string>
    <string name="textBryansk2">Впервые город упоминается в Ипатьевской летописи как «Дебрянск» под 1146 годом, позднее — в Воскресенской, Лаврентьевской, Троицкой летописях и других источниках. Название города «Брянск», по-видимому, произошло от древнерусского слова «Дьбряньскъ», образованного от слова дьбрь. Древнерусское слово дьбрь/дебрь означает «горный склон, ущелье, ров, долина или низина, поросшие густым лесом и кустарником». По закону падения слабых еров, ерь между д и б выпал, а сложное сочетание дб упростилось до б. По оценке В. А. Никонова, этимология топонима остаётся неясной, поскольку до конца XII века город именовался «Брынь» и непонятно, какая форма первичнее — «Брынь» или «Дьбряньскъ». Отпадение начального «дь» возможно, но не представляет фонетического закона.</string>
</resources>