<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="fill_parent"
    android:layout_weight="1"
    android:background="@drawable/fon2"
    android:orientation="vertical">


    <Button
        android:id="@+id/button"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:background="@drawable/button"
        android:onClick="sendMessage1"
        android:text="@string/b1" />

    <Button
        android:id="@+id/buttonBryansk"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:background="@drawable/button"
        android:onClick="sendMessage"
        android:text="@string/b2" />

    <Button
        android:id="@+id/button6"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:background="@drawable/button"
        android:onClick="sendMessage2"
        android:text="@string/b3" />


    <Button
        android:id="@+id/button8"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:background="@drawable/button"
        android:onClick="sendMessage3"
        android:text="@string/b5" />


    <Button
        android:id="@+id/button9"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:background="@drawable/button"
        android:onClick="sendMessage4"
        android:text="@string/b6" />

</LinearLayout>