<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="@drawable/fon2"
    android:layout_height="match_parent"
    tools:context=".ActivityBryansk">

    <ScrollView
        android:layout_width="409dp"
        android:layout_height="729dp"
        app:layout_constraintBottom_toBottomOf="parent"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="1dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="match_parent"
                android:layout_height="382dp"
                android:src="@drawable/kurg"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toTopOf="parent"/>

            <TextView
                android:id="@+id/textView2"
                android:textColor="@android:color/primary_text_light"
                android:layout_width="358dp"
                android:layout_height="wrap_content"
                android:text="@string/textBryansk" />

            <TextView
                android:id="@+id/textView4"
                android:textColor="@android:color/primary_text_light"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/textBryansk3"
                android:textSize="24sp"
                android:textStyle="bold"/>

            <TextView
                android:id="@+id/textView3"
                android:textColor="@android:color/primary_text_light"
                android:layout_width="359dp"
                android:layout_height="wrap_content"
                android:text="@string/textBryansk2" />

            <TextView
                android:id="@+id/textView5"
                android:textColor="@android:color/primary_text_light"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/textBryansk4"
                android:textSize="24sp"
                android:textStyle="bold"/>

            <TextView
                android:id="@+id/textView6"
                android:textColor="@android:color/primary_text_light"
                android:layout_width="360dp"
                android:layout_height="wrap_content"
                android:text="@string/textBryansk5" />

            <TextView
                android:id="@+id/textView7"
                android:textColor="@android:color/primary_text_light"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/textBryansk6"
                android:textSize="24sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textView8"
                android:textColor="@android:color/primary_text_light"
                android:layout_width="360dp"
                android:layout_height="wrap_content"
                android:text="@string/textBryansk7" />/>
        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>